Fetching users and showing details

--- a/watchOS-example/watchOS-example WatchKit App/Base.lproj/Interface.storyboard
+++ b/watchOS-example/watchOS-example WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dbH-0b-ot5">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="A8t-7b-eBV">
     <device id="watch38" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,6 +9,52 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11508"/>
     </dependencies>
     <scenes>
+        <!--Users-->
+        <scene sceneID="VGS-7f-UE1">
+            <objects>
+                <controller identifier="Users" id="A8t-7b-eBV" customClass="UsersInterfaceController" customModule="watchOS_example_WatchKit_Extension">
+                    <items>
+                        <table alignment="left" id="EZf-Y0-XB3">
+                            <items>
+                                <tableRow identifier="UserRow" id="rxD-lS-EPZ" customClass="UserRowController" customModule="watchOS_example_WatchKit_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="coR-su-LtM">
+                                        <items>
+                                            <group alignment="left" verticalAlignment="center" radius="12" id="N3e-QZ-ZAu">
+                                                <items>
+                                                    <imageView width="32" height="32" alignment="left" verticalAlignment="center" image="Logo" id="cq6-Nx-sUJ">
+                                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </imageView>
+                                                </items>
+                                            </group>
+                                            <label alignment="left" verticalAlignment="center" text="login" id="2co-Pf-DMt">
+                                                <color key="textColor" red="1" green="0.25686071529999999" blue="0.6224463012" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </label>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="avatar" destination="cq6-Nx-sUJ" id="Tdk-Iy-opC"/>
+                                        <outlet property="login" destination="2co-Pf-DMt" id="mTF-qK-lUd"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                        <group width="1" alignment="left" id="umW-LH-mlX">
+                            <items>
+                                <button width="1" alignment="left" title="Load more" id="gOy-4w-nQs">
+                                    <connections>
+                                        <action selector="loadMore" destination="A8t-7b-eBV" id="f8z-oj-dsk"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="table" destination="EZf-Y0-XB3" id="DXr-4q-00W"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="-146" y="311"/>
+        </scene>
         <!--User-->
         <scene sceneID="UDh-az-7aD">
             <objects>
@@ -16,7 +62,7 @@
                     <items>
                         <group width="1" alignment="left" id="hqb-so-YhO">
                             <items>
-                                <group alignment="left" radius="10" id="740-nN-9iV">
+                                <group alignment="left" radius="12" id="740-nN-9iV">
                                     <items>
                                         <imageView width="40" height="40" alignment="left" image="Logo" id="aJ0-hL-3kC">
                                             <color key="tintColor" red="1" green="0.25686071534371446" blue="0.62244630115209931" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,13 +82,13 @@
                         </group>
                         <group alignment="left" layout="vertical" id="WDY-sG-jv8">
                             <items>
-                                <label alignment="left" text="Email" id="UH0-xg-Yr1"/>
-                                <label alignment="left" text="Since" id="c0f-4I-E97"/>
+                                <label alignment="left" text="email" id="UH0-xg-Yr1"/>
+                                <label alignment="left" text="register date" id="c0f-4I-E97"/>
                             </items>
                         </group>
                         <group width="1" alignment="left" id="pre-P1-1nJ">
                             <items>
-                                <label alignment="left" verticalAlignment="bottom" text="345" id="0Wa-jV-xtq">
+                                <label alignment="left" verticalAlignment="bottom" text="0" id="0Wa-jV-xtq">
                                     <color key="textColor" red="1" green="0.25686071534371446" blue="0.62244630115209931" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="system" pointSize="40"/>
                                 </label>
@@ -53,7 +99,7 @@
                             <items>
                                 <group alignment="center" id="ue0-lz-P5g">
                                     <items>
-                                        <button alignment="left" title="go to phone" id="dQF-nT-Emo">
+                                        <button width="1" alignment="left" title="push to phone" id="dQF-nT-Emo">
                                             <connections>
                                                 <action selector="buttonClick" destination="dbH-0b-ot5" id="jAa-aT-laA"/>
                                             </connections>
